_src/_assets/styles/_page-front.scss
//
// Page: front
// ---
// bigchaindb.com
//

.page-front {
    .section--guides,
    .section--blog,
    .section-testimonials {
        @extend .background--darker;
    }
}

.section-intro {
    .section-header {
        margin-bottom: $spacer * 2;
    }

    p:last-child {
        margin-top: $spacer * 4;
        margin-bottom: 0;
    }
}

.section-intro__main {
    @extend .text-center;
    margin-bottom: $spacer * 4;
    margin-top: $spacer;

    h3 {
        @extend .h6;
        display: block;
        margin-bottom: 0;
        margin-top: 0;
        hyphens: auto;

        @media ($screen-sm) {
            font-size: $font-size-h5;
        }
    }

    sub {
        font-size: .85rem;
    }

    .icon {
        display: block;
        margin: auto;
        margin-bottom: $spacer;
    }
}

